--- a/install.txt
+++ b/install.txt
@@ -1,3 +1,17 @@
-Para iniciar clonamos el repositorio
+Para iniciar clonamos el repositorio desde cualquier consola sea cmd o PawerShell con el siguiente comando:
+ejecutamos el siguiente comando:
 
 git clone https://github.com/VictoriaGrageda/Grupo-TAG-TEAM.git
+
+Una vez clonada aparecera un archivo con el nombrre Grupo-TAG-TEAM abribimos con Visual Studio Code o directamente abrimos con una terminal cmd o PawerShell y le damos el siguiente comando:
+
+cd frontend --> para ingresar a la carpeta luego le damos el comando :
+
+npm install --> instalara todas las librerias usadas:
+
+y para ejecutar le damos el siguiente comando :
+
+npm run dev
+
+
+
