--- a/install.txt
+++ b/install.txt
@@ -1,17 +1,47 @@
-Para iniciar clonamos el repositorio desde cualquier consola sea cmd o PawerShell con el siguiente comando:
-ejecutamos el siguiente comando:
+
+--- Instrucciones para ejecutar el proyecto ---
+
+1. Clonar el repositorio
+
+Abra una terminal o consola de comandos y ejecute:
 
 git clone https://github.com/VictoriaGrageda/Grupo-TAG-TEAM.git
 
-Una vez clonada aparecera un archivo con el nombrre Grupo-TAG-TEAM abribimos con Visual Studio Code o directamente abrimos con una terminal cmd o PawerShell y le damos el siguiente comando:
+2. Configuración del Frontend
 
-cd frontend --> para ingresar a la carpeta luego le damos el comando :
+Desde la raíz del proyecto, ejecuta:
 
-npm install --> instalara todas las librerias usadas:
+cd frontend 
 
-y para ejecutar le damos el siguiente comando :
+2.1 Instalar dependencias y ejecutar:
 
+npm install
 npm run dev
+
+La aplicación estará disponible en tu navegador en:
+http://localhost:5173/
+
+3. Configuración del Backend
+
+3.1 Navegar al directorio del backend
+Desde la raíz del proyecto, ejecuta:
+cd backend
+
+Si ya estás en la carpeta frontend, usa: cd ../backend
+
+3.2 Crear un archivo llamado .env en la raíz de la carpeta backend y agregar el siguiente contenido:
+
+DATABASE_URL="postgresql://postgres.lorzaapxhgreljzymwhv:IwnALO7u9FixjcF1@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+DIRECT_URL="postgresql://postgres.lorzaapxhgreljzymwhv:IwnALO7u9FixjcF1@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+
+CLOUDINARY_API_KEY="382549645255776"
+
+CLOUDINARY_API_SECRET="JBkLTytgMQ0Do0dqIF3s0lDOhGg"
+
+JWT_SECRET=supersecreto123
+
+
 
 
 
