--- a/install.txt
+++ b/install.txt
@@ -17,6 +17,10 @@ cd frontend
 
 npm install
 npm run dev
+npm install framer-motion lucide-react
+npm install react-router-dom
+npm install lucide-react
+npm install firebase
 
 La aplicación estará disponible en tu navegador en:
 http://localhost:5173/
