--- a/install.txt
+++ b/install.txt
@@ -56,6 +56,9 @@ npm run dev
 El servidor estará disponible en:
 http://localhost:3000/
 
+y comando externo para ver los usuarios creados:
+npx prisma studio
+
 
 
 
